# Qt-Calculator-GUI

./: CMakeLists.txt  README.md  build.ps1  mainwindow.ui
include/: CalculatorButton.hpp  NumberBarWidget.hpp  mainwindow.h
src/: CalculatorButton.cpp  NumberBarWidget.cpp  main.cpp  mainwindow.cpp
